# logic-md

./: .gitignore  .npmrc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LOGIC-MD-STRATEGIC-PLAN.md  README.md  ROADMAP.md  biome.json  package-lock.json  package.json  tsconfig.build.json
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  spec_question.md
.github/actions/validate/: action.yml
.github/workflows/: ci.yml
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/02-type-system-and-json-schema/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-parser/: 03-01-SUMMARY.md  03-VERIFICATION.md
.planning/phases/04-schema-validator/: 04-01-SUMMARY.md  04-02-SUMMARY.md
.planning/phases/05-expression-engine/: 05-01-SUMMARY.md  (+2 more)
adapters/langgraph/: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  FILES.md  QUICKSTART.md  README.md  STATUS.md  package.json  tsconfig.json  vitest.config.ts
benchmarks/: llm-adapter.mjs  package.json  run.mjs  scoring.mjs
benchmarks/tasks/: code-review.json  research-synthesis.json  security-audit.json
docs/: IMPLEMENTER-GUIDE.md  SPEC.md
docs/handover/: LOGIC_MD_HANDOVER.md
docs/outreach/: hacker-news-show-hn.md  langchain-discord.md  reddit-localllama.md  reddit-machinelearning.md  twitter-thread.md
editors/vscode/: LICENSE  language-configuration.json  package-lock.json  package.json  tsconfig.json
sdks/python/: DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
sdks/python/src/logic_md/: __init__.py  parser.py  types.py  validator.py
sdks/python/src/logic_md.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdks/python/tests/: __init__.py  conftest.py  test_conformance.py  test_parser.py  test_validator.py
spec/fixtures/: run-fixtures.mjs
(+57 files in other folders)
